--- a/templates/consulta.html
+++ b/templates/consulta.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Consulta de Geração</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
+{% extends 'base.html' %}
+
+{% block title %}Cadastrar Geração Diária{% endblock %}
+
+{% block content %}
 <body class="bg-light">
 
     <div class="container mt-5">
@@ -83,3 +79,4 @@
 
 </body>
 </html>
+{% endblock %}
