--- a/templates/listar_despesas.html
+++ b/templates/listar_despesas.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Lista de Despesas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+{% extends 'base.html' %}
+
+{% block title %}Cadastrar Geração Diária{% endblock %}
+
+{% block content %}
 <body class="bg-light">
 
 <div class="container mt-5 p-4 bg-white shadow rounded">
@@ -72,3 +70,4 @@
 
 </body>
 </html>
+{% endblock %}
