--- a/templates/listar_faturas.html
+++ b/templates/listar_faturas.html
@@ -1,44 +1,10 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Faturas Cadastradas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
+{% extends 'base.html' %}
 
-        .container {
-            max-width: 1200px;
-        }
+{% block title %}Cadastrar Geração Diária{% endblock %}
 
-        table th, table td {
-            vertical-align: middle;
-        }
-
-        .form-label {
-            font-weight: 600;
-        }
-
-        .btn-sm {
-            min-width: 100px;
-        }
-
-        .whatsapp-btn {
-            padding: 0.375rem 0.75rem;
-        }
-    </style>
-</head>
+{% block content %}
 <body>
 <div class="container mt-5 mb-5 p-4 bg-white shadow rounded">
-
-    <div class="mb-3">
-        <a href="{{ url_for('index') }}">
-            <img src="{{ url_for('static', filename='img/LogoEmpresa.jpg') }}" alt="Início" style="height: 50px;">
-        </a>
-    </div>
 
     <h2 class="mb-4 text-primary text-center">Faturas Cadastradas</h2>
 
@@ -196,3 +162,4 @@ document.getElementById('usina_id').addEventListener('change', function () {
 
 </body>
 </html>
+{% endblock %}
