--- a/templates/financeiro.html
+++ b/templates/financeiro.html
@@ -21,6 +21,9 @@
             <a href="{{ url_for('relatorio_cliente') }}" class="btn btn-outline-primary btn-sm">
                 👥 Por Cliente
             </a>
+            <a href="{{ url_for('relatorio_gestao_usina') }}" class="btn btn-outline-dark btn-sm">
+                📊 Gestão por Usina (Geração x Recebido)
+            </a>
         </div>
     </div>
 
@@ -82,6 +85,7 @@
             <tbody>
                 {% for item in financeiro %}
                 <tr class="{% if item.tipo == 'receita' %}table-success{% else %}table-danger{% endif %}">
+
                     <td>{{ item.tipo.title() }}</td>
                     <td>{{ item.usina }}</td>
                     <td>{{ item.categoria or '-' }}</td>
